// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Component shoult render authenticated routes 1`] = `
<header
  className="navigation"
>
  <img
    alt=""
    className="logo"
    src="white-origami-bird.png"
  />
  <li
    className="header-list-item"
    data-test-id="link-Publications"
  >
    <a
      className="header-link"
      href="/"
      onClick={[Function]}
    >
      Publications
    </a>
  </li>
  <li
    className="header-list-item"
    data-test-id="link-Share your throughts"
  >
    <a
      className="header-link"
      href="/share"
      onClick={[Function]}
    >
      Share your throughts
    </a>
  </li>
  <li
    className="header-list-item"
    data-test-id="link-Profile"
  >
    <a
      className="header-link"
      href="/profile/123"
      onClick={[Function]}
    >
      Profile
    </a>
  </li>
</header>
`;

exports[`Header Component shout render non-authenticated routes 1`] = `
<header
  className="navigation"
>
  <img
    alt=""
    className="logo"
    src="white-origami-bird.png"
  />
  <li
    className="header-list-item"
    data-test-id="link-Publications"
  >
    <a
      className="header-link"
      href="/"
      onClick={[Function]}
    >
      Publications
    </a>
  </li>
  <li
    className="header-list-item"
    data-test-id="link-Register"
  >
    <a
      className="header-link"
      href="/register"
      onClick={[Function]}
    >
      Register
    </a>
  </li>
  <li
    className="header-list-item"
    data-test-id="link-Login"
  >
    <a
      className="header-link"
      href="/login"
      onClick={[Function]}
    >
      Login
    </a>
  </li>
</header>
`;
